increase graphql version to 17